--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,17 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <script src="https://kit.fontawesome.com/ce21fbf27d.js" crossorigin="anonymous"></script>
+    <!--
+    Font awesome cdn
+    -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <!--
+      Google font import
+    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
